data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4243.wast
;; 2. **Test Description:**    Include a `call_indirect` within a nested `loop` and contain br_table instruction that attempts to exit multiple levels of nesting to confirm if the jump targets are resolved correctly and do not cause unintended traps.    - **Constraint Checked:** Proper interpretation of nested loop boundaries.    - **Mismanagement Relation:** Ensures that the engine correctly manages loop exits without bugs in nested contexts.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (type (func (param i32)))
    (table funcref (elem 0))
    (func $nested-loop-call-indirect
      (local $index i32)
      (loop $outer
        (loop $inner
          (call_indirect (type 0) (local.get $index))
          (br_table $outer $inner (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)